# test_rocket_server

./: .env  Cargo.toml
src/: main.rs
