[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_cors = "0.5.2"
rocket_contrib = "0.4.11"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
status = "0.0.10"

