[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.2"
rocket_contrib = "0.4.11"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
status = "0.0.10"
hostname = "0.3.1"
serde_derive = "1.0.130"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenv = "0.15"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_codegen]
version = "0.4.10"
optional = true
default-features = false

[dependencies.rocket_http]
version = "0.4.10"
optional = true
default-features = false

